--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "wj-general-tools",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "A collection of common tools in a node environment",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "auth",
+    "tools",
+    "jwt"
+  ],
+  "author": "oywenjiao",
+  "license": "MIT",
+  "bugs": "https://github.com/oywenjiao/wj-general-tools/issues",
   "dependencies": {
     "jsonwebtoken": "^8.5.1"
   },
